--- a/mnist_classifier/Cargo.toml
+++ b/mnist_classifier/Cargo.toml
@@ -7,3 +7,10 @@ edition = "2021"
 
 [dependencies]
 rust-mnist = "0.2.0"
+
+[dev-dependencies]
+criterion = { version = "0.4", features = ["html_reports"] }
+
+[[bench]]
+name = "my_benchmark"
+harness = false
